# olympus-cloud-gcp

./: .env.example  .gitignore  CLAUDE-FINAL-STATUS.md  CLAUDE-PROGRESS.md  CLAUDE.md  CONTRIBUTING.md  E2E_TESTING_REPORT.md  INFRASTRUCTURE-COMPLETE.md  Makefile  QUICK-REFERENCE.md  README.md  WATCH_APP_SUMMARY.md  WORKSPACE-STRUCTURE.md  docker-compose.yml  outputs.tf  setup.sh  variables.tf
.github/: CHATGPT.md  CLAUDE.md  GITHUB-COPILOT.md  GOOGLE-GEMINI.md  OPENAI-CODEX.md  copilot-instructions.md
.github/workflows/: infrastructure-deploy.yml  rust-ci-cd.yml
backend/go/: CHATGPT-TASKS.md  README.md  go.mod  go.sum
backend/python/: CODEX-TASKS.md  README.md  main.py  requirements.txt
backend/rust/: .env.example  .gitignore  API.md  CLAUDE-TASKS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.production  Makefile  PHASE5_IMPLEMENTATION_SUMMARY.md  README.md  STATUS.md  docker-compose.production.yml  docker-compose.yml  setup.sh
backend/rust/.github/workflows/: rust-ci.yml
backend/rust/.sqlx/: config.toml
backend/rust/auth/: Cargo.toml
backend/rust/auth/src/: config.rs  error.rs  event_handlers.rs  handlers.rs  lib.rs  middleware.rs  models.rs
backend/rust/auth/src/services/: jwt.rs  mock_repository.rs  mod.rs  password.rs  user_repository.rs  user_repository_runtime.rs
backend/rust/auth/tests/: auth_tests.rs  integration_test.rs  integration_tests.rs
backend/rust/benches/: performance_benchmarks.rs
backend/rust/commerce/: Cargo.toml
backend/rust/commerce/src/: customer_security.rs  event_handlers.rs  handlers.rs  lib.rs  models.rs  restaurant_integration_test.rs  services.rs  simple_handlers.rs  simple_models.rs  simple_service.rs
backend/rust/commerce/src/handlers/: analytics.rs  customer_security.rs  inventory.rs  mod.rs  orders.rs  payments.rs  products.rs  restaurant.rs  websocket.rs
backend/rust/commerce/src/models/: customer_security.rs  inventory_transactions.rs  mod.rs  restaurant.rs
backend/rust/commerce/src/services/: analytics.rs  catalog.rs  customer_security_service.rs  inventory.rs  inventory_service.rs  mod.rs  order.rs  order_service.rs  payment_service.rs  restaurant_service.rs
backend/rust/commerce/src/services/gateways/: mod.rs  square.rs  stripe.rs
backend/rust/commerce/src/tests/: analytics_tests.rs  inventory_tests.rs  mod.rs  payment_tests.rs
backend/rust/commerce/tests/: commerce_tests.rs
backend/rust/docs/: API_ENDPOINTS.md  DEPLOYMENT.md  GO_INTEGRATION.md  PYTHON_EVENTS.md
backend/rust/migrations/: 001_initial_schema.sql  002_auth_system.sql  003_commerce_system.sql  004_analytics_tables.sql  005_indexes_and_constraints.sql  006_platform_system.sql  007_restaurant_system.sql  008_customer_security_enhancements.sql  009_inventory_transaction_system.sql  010_advanced_tenant_management.sql  999_temp_platform_only.sql
backend/rust/monitoring/: prometheus.yml
backend/rust/monitoring/alerts/: service_alerts.yml
backend/rust/platform/: Cargo.toml
backend/rust/platform/src/: event_handlers.rs  handlers.rs  lib.rs  models.rs  services.rs
backend/rust/platform/src/handlers/: config.rs  locations.rs  tenants.rs  users.rs
backend/rust/platform/src/middleware/: mod.rs  tenant.rs
backend/rust/platform/src/services/: config.rs  config_simple.rs  customer_security_service.rs  feature_flags.rs  location.rs  mod.rs  monitoring.rs  rbac.rs  tenant_management.rs  tenant_management_simple.rs  tenant_service.rs
backend/rust/platform/tests/: integration_test.rs  platform_tests.rs
backend/rust/shared/: Cargo.toml  main.tf  outputs.tf
backend/rust/shared/src/: config.rs  database.rs  error.rs  events.rs  integration.rs  lib.rs  monitoring.rs  security.rs  types.rs
backend/rust/shared/src/clients/: analytics.rs  auth.rs  commerce.rs  grpc_client.rs  http_client.rs  mod.rs  platform.rs
backend/rust/shared/src/database/: connection.rs  health.rs  migrations.rs  mod.rs  rls.rs
backend/rust/shared/src/events/: domain.rs  mod.rs  publisher.rs  subscriber.rs  types.rs
backend/rust/shared/src/models/: mod.rs  order.rs  payment.rs  permission.rs  product.rs  session.rs  simple_models.rs  tenant.rs  user.rs
backend/rust/shared/tests/: event_system_tests.rs
backend/rust/src/: config.rs  health.rs  main.rs  security.rs
backend/rust/src/batch/: mod.rs
backend/rust/src/cache/: mod.rs
backend/rust/src/compression/: mod.rs
backend/rust/src/graphql/: mod.rs
backend/rust/src/versioning/: mod.rs
backend/rust/src/websocket/: mod.rs
backend/rust/tests/: health_check.rs  simple_health_test.rs
database/migrations/: 005_payments.sql  006_inventory.sql
docs/: 00-EXECUTIVE-SUMMARY-ROADMAP.md  01-MASTER-IMPLEMENTATION-GUIDE.md  02-AI-AGENT-TASK-ASSIGNMENTS.md  03-NEBUSAI-METHODOLOGY-IMPLEMENTATION.md  04-QUICK-START-GUIDE.md  05-COMPLETE-DATABASE-SCHEMA.sql  06-API-SPECIFICATION.yaml  07-DEPLOYMENT-GUIDE.md  09-DEPLOYMENT-STRATEGY.md  11-INCIDENT-RESPONSE-PLAN.md  AI-AGENT-NEXT-STEPS.md  BACKEND-STATUS.md  COORDINATION-STATUS.md  INFRASTRUCTURE-STATUS.md  README-UI-UX.md  START-HERE-NOW.md  copilot-action-plan.md  copilot-update-guide.md  daily-status.md  flutter-rust-integration-guide.md  frontend-ui-ux-implementation-plan.md  go-rust-integration-guide.md  integration-points.md  olympus-frontend-ui-ux-plan.md  olympus-technical-spec.md  restaurant-revolution-customer-ui-implementation.md  restaurant-revolution-implementation-guide.md  restaurant-revolution-master-plan.md  restaurant-revolution-sprint-plan.md  restaurant-revolution-staff-ui.md  restaurant-revolution-ui-implementation.md
frontend/: README.md  pubspec.yaml
frontend/lib/: app.dart  main.dart
frontend/linux/: CMakeLists.txt
frontend/test/: api_service_test.dart  auth_flow_test.dart  debug_validation_test.dart  integration_test.dart  integration_test.mocks.dart  inventory_management_test.dart  order_management_test.dart  providers_test.dart  widget_test.dart
infrastructure/: GEMINI-TASKS.md
infrastructure/terraform/: .gitignore  README.md  apis.tf  cloudflare.tf  cost-analysis.md  deployment-checklist.md  industry-features.tf  main.tf  (+5 more)
(+183 files in other folders)
