[workspace]
members = ["auth", "platform", "commerce", "shared"]
resolver = "2"

[package]
name = "olympus-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Claude Code <claude@olympuscloud.io>"]
license = "Proprietary"

[workspace.dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }

# Authentication & Security
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Redis for caching/events
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Testing
rstest = "0.18"
mockall = "0.12"
wiremock = "0.5"

# Validation
validator = { version = "0.16", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# gRPC
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Monitoring & Metrics
prometheus = "0.13"
metrics = "0.22"
metrics-prometheus = "0.6"

# Circuit breaker and retry
backoff = "0.4"

# Async trait
async-trait = "0.1"

# Additional dependencies
base64 = "0.22"
sha2 = "0.10"
lazy_static = "1.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
rust_decimal = { version = "1.32", features = ["serde-with-str"] }
regex = "1.10"
form_urlencoded = "1.2"

# GraphQL
async-graphql = { version = "7.0", features = ["chrono", "uuid", "decimal"] }
async-stream = "0.3"

# Bytes handling
bytes = "1.5"

# Compression
flate2 = "1.0"
brotli = "3.4"

[dependencies]
# Local crates
olympus-auth = { path = "auth" }
olympus-platform = { path = "platform" }
olympus-commerce = { path = "commerce" }
olympus-shared = { path = "shared" }

# Runtime
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true