[package]
name = "olympus-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Local dependencies
olympus-shared = { path = "../shared" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Authentication
jsonwebtoken.workspace = true
argon2.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
rand.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Redis
redis.workspace = true

# Validation
validator.workspace = true

[dev-dependencies]
rstest.workspace = true
mockall.workspace = true
wiremock.workspace = true
reqwest.workspace = true
tracing-subscriber.workspace = true