[package]
name = "olympus-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Database
sqlx.workspace = true

# Redis
redis.workspace = true

# Logging
tracing.workspace = true

# Validation
validator.workspace = true

# Authentication
jsonwebtoken.workspace = true

# Encryption and Security
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tokio.workspace = true
rstest.workspace = true