[package]
name = "olympus-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Database
sqlx.workspace = true

# Redis
redis.workspace = true

# Logging
tracing.workspace = true

# Validation
validator.workspace = true

# Authentication
jsonwebtoken.workspace = true

# Additional dependencies
rust_decimal.workspace = true
rand.workspace = true
tokio.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Async trait support
async-trait = "0.1"
futures.workspace = true

# Phase 5 Event System Dependencies
sha2 = "0.10"  # For event checksums

# Phase 6 API Integration Dependencies
reqwest.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
prometheus.workspace = true
metrics.workspace = true
metrics-prometheus.workspace = true
backoff.workspace = true
lazy_static.workspace = true
axum.workspace = true

[dev-dependencies]
tokio.workspace = true
rstest.workspace = true